# Ecommerce-QA-Platform-with-Google-Palm

./: .gitignore  README.md  helpers.py  main.pt.py  pyproject.toml
Notebooks/: Google PaLM.ipynb
data/faiss_index/: index.faiss  index.pkl
