[tool.poetry]
name = "ecommerce-qa-platform-with-google-palm-in-langchain"
version = "0.1.0"
description = ""
authors = ["Arman Babayan <arman.babayan.92@gamil.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.0.325"
jupyter = "^1.0.0"
python-dotenv = "^1.0.0"
google-generativeai = "^0.2.2"
jq = "^1.6.0"
instructorembedding = "^1.0.1"
torch = "^2.1.0"
sentence-transformers = "^2.2.2"
faiss-cpu = "^1.7.4"
streamlit = "^1.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
